<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">donor</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_institution">InstitutionActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_invite">InviteActivity</string>

    <!-- activity_main -->
    <string name="main_logo">Logo</string>
    <string name="main_profile">Profil</string>
    <string name="main_settings">Postavke</string>
    <string name="main_institution">Institucije</string>
    <string name="main_donations">Donacije</string>

    <!-- activity_login -->
    <string name="login_title">Prijavite se</string>
    <string name="login_btn_cancel">Odustani!</string>
    <string name="login_lbl_email">Email:</string>
    <string name="login_email_example">example@mail.com</string>
    <string name="login_pass_example">******</string>
    <string name="login_lbl_pass">Lozinka:  </string>
    <string name="login_btn_login">Prijava</string>
    <string name="login_btn_register">Registracija</string>
    <string name="login_reset_password">Resetiraj lozinku</string>

    <!-- activity_main -->
    <string name="main_title">BloodBank</string>

    <!-- activity_register -->
    <string name="register_title">Registrirajte se</string>
    <string name="register_lbl_email">Email:</string>
    <string name="register_lbl_password">Lozinka:</string>
    <string name="register_lbl_repeatePassword">Ponovno:</string>
    <string name="register_lbl_firstName">Ime:</string>
    <string name="register_lbl_lastName">Prezime:</string>
    <string name="register_lbl_picture">Slika:</string>
    <string name="register_register">Registriraj</string>
    <string name="register_cancel">Odustani</string>
    <string name="register_weight">Težina:</string>
    <string name="register_phone">Telefon:</string>
    <string name="regsiter_sex">Spol:</string>
    <string name="register_year">Rođen/a:</string>
    <string name="register_city">Grad:</string>
    <string name="register_sickness">Bolesti:</string>
    <string name="register_blood_type">Krvna grupa:</string>

    <!-- activity_profile -->
    <string name="profile_title">Moj profil</string>
    <string name="profile_lbl_email">Email:</string>
    <string name="profile_lbl_password">Lozinka:</string>
    <string name="profile_lbl_firstName">Ime:</string>
    <string name="profile_lbl_lastName">Prezime:</string>
    <string name="profile_lbl_picture">Slika:</string>
    <string name="profile_weight">Težina:</string>
    <string name="profile_year">Rođen/a:</string>
    <string name="profile_city">Grad:</string>
    <string name="profile_sickness">Bolesti:</string>
    <string name="progile_sex">Spol:</string>
    <string name="profile_update">Ažuriraj</string>
    <string name="profile_lblTattoo">Tattoo:</string>
    <string name="profile_lblPierce">Pierce:</string>

    <!-- activity_profile statistics -->
    <string name="profile_statistics_title">Statistika</string>

    <!-- activity_profile Achievements -->
    <string name="profile_achievments_title">Achievements</string>

    <!-- activity_reset -->
    <string name="reset_title">Resetiranje korisničke zaporke</string>
    <string name="reset_email">Email:</string>
    <string name="reset_resetiraj">Resetiraj</string>
    <string name="reset_pogreska">Pogreška kod resetiranja lozinke</string>
    <string name="reset_uspjeh">Uspješno ste resetirali zaporku! Pogledajte email!</string>

    
    <!--  activity_settings -->
    <string name="settings_title">Postavke</string>
    <string name="settings_notification">Notifikacije:</string>
    <string name="settings_logoff">Odjava</string>
    
    <!-- activity_donations -->
    <string name="donations_title">Moje donacije</string>
    <string name="donations_ukupno">Ukupno donacija</string>
    <string name="donations_posljednja">Posljednja donacija</string>
    <string name="donations_moguce">Moguće donirati za </string>
    <string name="donations_graf">Donacije</string>
    <string name="donations_nema_donacija">6</string>
    <string name="donations_nema_posljednje">20.11.2014.</string>
    <string name="donations_now">86 dana.</string>
    
    <!--  activity_institution -->
    <string name="institution_title">Institucije</string>
    
    <!-- activity_settings -->

    
    <string-array name="sex_array">
        <item>M</item>
        <item>Ž</item>
    </string-array>
    <string-array name="year_array">
        <item>1900</item>
        <item>2050</item>
    </string-array>
    <string-array name="blood_type_array">
        <item>A-</item>
        <item>A+</item>
        <item>B-</item>
        <item>B+</item>
        <item>AB-</item>
        <item>AB+</item>
        <item>0-</item>
        <item>0+</item>
    </string-array>

    <string name="title_activity_reset">ResetActivity</string>
    <string name="title_activity_donations">DonationsActivity</string>

</resources>
