<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.test.LoginActivity" >

    <EditText
        android:id="@+id/login_txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/login_lblEmail"
        android:layout_alignBottom="@+id/login_lblEmail"
        android:layout_toRightOf="@+id/login_lblPassword"
        android:ems="10"
        android:hint="@string/login_email_example"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/login_lblPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/login_lblEmail"
        android:layout_below="@+id/login_txtEmail"
        android:layout_marginTop="68dp"
        android:text="@string/login_lbl_pass" />

    <TextView
        android:id="@+id/login_lblEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="152dp"
        android:text="@string/login_lbl_email" />

    <EditText
        android:id="@+id/login_txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/login_lblPassword"
        android:layout_alignBottom="@+id/login_lblPassword"
        android:layout_alignLeft="@+id/login_txtEmail"
        android:ems="10"
        android:hint="@string/login_pass_example"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_txtPassword"
        android:layout_below="@+id/login_btnLogin"
        android:text="@string/login_btn_register" />

    <Button
        android:id="@+id/login_btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/login_btnRegister"
        android:layout_below="@+id/login_txtPassword"
        android:layout_marginRight="18dp"
        android:layout_marginTop="18dp"
        android:text="@string/login_btn_login" />

    <TextView
        android:id="@+id/login_lblResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_btnLogin"
        android:layout_below="@+id/login_btnRegister"
        android:text="@string/login_reset_password" />

</RelativeLayout>