<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hr.mastermind.donor.DonationsActivity" >

    <TextView
        android:id="@+id/donation_lblNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:text="@string/donations_ukupno" />

    <TextView
        android:id="@+id/donation_txtUkupno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/donation_lblNumber"
        android:layout_centerHorizontal="true"
        android:text="@string/donations_nema_donacija"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/donation_lblLastDonation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/donation_lblNumber"
        android:layout_below="@+id/donation_txtUkupno"
        android:layout_marginTop="20dp"
        android:text="@string/donations_posljednja" />

    <TextView
        android:id="@+id/donation_txtLastDonation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/donation_txtUkupno"
        android:layout_below="@+id/donation_lblLastDonation"
        android:layout_marginTop="16dp"
        android:text="@string/donations_nema_posljednje"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/donation_lblNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/donation_lblLastDonation"
        android:layout_below="@+id/donation_txtLastDonation"
        android:layout_marginTop="18dp"
        android:text="@string/donations_moguce" />

    <TextView
        android:id="@+id/donation_txtNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/donation_txtLastDonation"
        android:layout_below="@+id/donation_lblNext"
        android:text="@string/donations_now"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
