<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_lblSex"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.test.RegisterActivity" >

    <TextView
        android:id="@+id/register_lblPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/register_lblEmail"
        android:layout_below="@+id/register_lblEmail"
        android:layout_marginTop="24dp"
        android:text="@string/register_lbl_password" />

    <TextView
        android:id="@+id/register_lblFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/profile_txtFirstName"
        android:layout_alignBottom="@+id/profile_txtFirstName"
        android:layout_alignLeft="@+id/register_lblLastName"
        android:text="@string/register_lbl_firstName" />

    <TextView
        android:id="@+id/register_lblEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="44dp"
        android:text="@string/register_lbl_email" />

    <EditText
        android:id="@+id/profile_txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/register_lblEmail"
        android:layout_alignBottom="@+id/register_lblEmail"
        android:layout_toRightOf="@+id/register_lblEmail"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/profile_txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/register_lblPassword"
        android:layout_alignBottom="@+id/register_lblPassword"
        android:layout_alignLeft="@+id/profile_txtEmail"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/profile_txtPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/profile_txtPassword"
        android:layout_below="@+id/profile_txtPassword"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/profile_txtFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/profile_txtPassword2"
        android:layout_below="@+id/profile_txtPassword2"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/profile_txtLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/profile_txtFirstName"
        android:layout_below="@+id/profile_txtFirstName"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/register_lbiPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/profile_txtPassword2"
        android:layout_alignRight="@+id/register_lblPassword"
        android:text="@string/register_lbl_repeatePassword" />

    <TextView
        android:id="@+id/register_lblLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/profile_txtLastName"
        android:layout_alignLeft="@+id/register_lbiPassword2"
        android:text="@string/register_lbl_lastName" />

    <TextView
        android:id="@+id/register_lblcCty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/register_lblLastName"
        android:layout_below="@+id/register_lblLastName"
        android:layout_marginTop="18dp"
        android:text="@string/register_city" />

    <TextView
        android:id="@+id/register_lblPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/profile_txtPhone"
        android:layout_alignRight="@+id/register_lblcCty"
        android:text="@string/register_phone" />

    <EditText
        android:id="@+id/profile_txtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/profile_txtLastName"
        android:layout_below="@+id/profile_txtCity"
        android:ems="10"
        android:inputType="phone" >

       
    </EditText>

    <EditText
        android:id="@+id/profile_txtCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/profile_txtPhone"
        android:layout_below="@+id/profile_txtLastName"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/login_lblResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/register_lblPassword"
        android:layout_below="@+id/register_lblPhone"
        android:layout_marginTop="22dp"
        android:text="@string/regsiter_sex" />

    <TextView
        android:id="@+id/register_lblBloodType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/register_lblPhone"
        android:layout_below="@+id/login_lblResetPassword"
        android:layout_marginTop="20dp"
        android:text="@string/register_blood_type" />

    <Spinner
        android:id="@+id/profile_spnBloodType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/register_lblBloodType"
        android:layout_alignRight="@+id/profile_spnSex"
        android:layout_below="@+id/profile_spnSex"
        android:layout_toRightOf="@+id/register_lblBloodType" />

    <TextView
        android:id="@+id/register_lblYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/profile_btnUpdate"
        android:layout_alignLeft="@+id/register_lblBloodType"
        android:text="@string/register_year" />

    <EditText
        android:id="@+id/profile_intWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/profile_txtEmail"
        android:layout_alignLeft="@+id/profile_spnBloodType"
        android:ems="10"
        android:inputType="number" />

    <Spinner
        android:id="@+id/profile_spnSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register_lblBloodType"
        android:layout_alignLeft="@+id/profile_txtPhone"
        android:layout_below="@+id/profile_txtPhone" />

    <EditText
        android:id="@+id/profile_txtYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/register_lblYear"
        android:layout_alignBottom="@+id/register_lblYear"
        android:layout_alignLeft="@+id/profile_spnBloodType"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/register_lblWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/profile_intWeight"
        android:layout_alignBottom="@+id/profile_intWeight"
        android:layout_toRightOf="@+id/register_lblFirstName"
        android:text="@string/register_weight" />

    <Button
        android:id="@+id/profile_btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/profile_txtYear"
        android:text="@string/profile_update" />

</RelativeLayout>